# WeatherApp

./: README.md  pyproject.toml  setup.py
src/controllers/: weather.py
src/settings/: config.py  database.json  log.py
src/templates/: index.html  start.html
